tests/single_instruction_translation_validation/mcsema/register-variants-samereg/phsubw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:206:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %19)
            ^
0.03user 0.01system 0:00.17elapsed 29%CPU (0avgtext+0avgdata 27188maxresident)k
0inputs+16outputs (0major+3300minor)pagefaults 0swaps
